# Langgraph

./: README.md  pyproject.toml  requirements.txt
1.Sequential_workflows/: 1.bmi_workflow.ipynb  2.llm_workflow.ipynb  3.prompt_chaining.ipynb
2.Parallel_workflows/: 1.cricket.ipynb  2.UPSC.ipynb
3.Conditional_workflows/: 1.quadraticequation.ipynb  2.review_reply.ipynb
4. Iterative_workflow/: new.ipynb
5.Persistence/: persistence.ipynb
6.Chatbot_/: backend.py  frontend.py
chatbot/: basic101.ipynb
